[package]
name = "dummy-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]

zenoh = "0.10.0-rc"
async-std = { version = "=1.12.0", features = ["attributes", "unstable"] }
futures = "0.3.15"
clap = "3.2.15"
log = "0.4"
env_logger = "0.9.0"
drm-fourcc = "2.2"


serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

imu-message = { path = "../imu-message" }

[[bin]]
name = "pub_dummy_imu"
test = false
bench = false
path = "src/pub_dummy_imu.rs"
